# RemoveSpamsCall

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  prompt.md  pyproject.toml
.github/workflows/: tests.yml
data/: brokers.yaml
src/privacytool/: __init__.py
src/privacytool/cli/: cmd_act.py  cmd_config.py  cmd_export.py  cmd_followups.py  cmd_init.py  cmd_resolve.py  cmd_review.py  cmd_scan.py  cmd_status.py  main.py
src/privacytool/connectors/: base.py
src/privacytool/connectors/brokers/: assisted.py  auto.py  base_broker.py  loader.py  webdriver_session.py
src/privacytool/connectors/engines/: bing.py  duckduckgo.py  google.py  yahoo.py  yandex.py
src/privacytool/core/: config.py  crypto.py  db.py  logger.py  models.py  pii.py  runner.py
src/privacytool/dashboard/: views.py
src/privacytool/letters/: generator.py
templates/letters/: ccpa_deletion.j2  gdpr_article17.j2  general_deletion.j2
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_auto_broker.py  test_crypto.py  test_db.py  test_letter_gen.py  test_pii.py  test_redactor.py  test_runner.py
