[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacytool"
version = "0.1.0"
description = "Personal data removal and privacy protection CLI"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12.5,<1.0",
    "rich==13.7.1",
    "cryptography==42.0.8",
    "python-dotenv==1.0.1",
    "jinja2==3.1.4",
    "reportlab==4.2.2",
    "requests==2.32.3",
    "tenacity==8.3.0",
    "phonenumbers==8.13.39",
    "google-api-python-client==2.134.0",
    "serpapi==0.1.5",
    "selenium==4.22.0",
    "pyyaml==6.0.1",
    "keyring==25.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "responses==0.25.3",
    "pytest-cov==5.0.0",
]

[project.scripts]
privacytool = "privacytool.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/privacytool"]
omit = ["tests/*"]
